--- a/HTTPLoaderTesterGUI/HTTPLoaderTesterGUI.vbproj
+++ b/HTTPLoaderTesterGUI/HTTPLoaderTesterGUI.vbproj
@@ -100,6 +100,7 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -122,6 +123,7 @@
   <ItemGroup>
     <Compile Include="App.vb" />
     <Compile Include="HTTPAction.vb" />
+    <Compile Include="StatsClient.vb" />
     <Compile Include="Utils.vb" />
     <Compile Include="Settings.vb" />
     <Compile Include="frmPaths.Designer.vb">
